Production code now compiling under Spring Boot 4